fix: deployment error - problem with prisma binaries. - problem with pnpm node linker

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,12 +19,12 @@
 		{
 			"type": "shell",
 			"label": "pnpm install (functions)",
-			"command": "pnpm install"
+			"command": "pnpm install --config.node-linker=hoisted"
 		},
 		{
 			"type": "shell",
 			"label": "pnpm prune (functions)",
-			"command": "pnpm prune --production",
+			"command": "pnpm prune --production --config.ignore-scripts=true",
 			"dependsOn": "pnpm build (functions)",
 			"problemMatcher": []
 		},
