--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
 	"azureFunctions.deploySubpath": ".",
-	"azureFunctions.postDeployTask": "npm install (functions)",
+	"azureFunctions.postDeployTask": "pnpm install (functions)",
 	"azureFunctions.projectLanguage": "TypeScript",
 	"azureFunctions.projectRuntime": "~4",
 	"debug.internalConsoleOptions": "neverOpen",
 	"azureFunctions.projectLanguageModel": 4,
-	"azureFunctions.preDeployTask": "npm prune (functions)",
+	"azureFunctions.preDeployTask": "pnpm prune (functions)",
 	"typescript.tsdk": "node_modules\\typescript\\lib"
 }
