--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,6 +23,11 @@
 		},
 		{
 			"type": "shell",
+			"label": "pnpm install all(functions)",
+			"command": "pnpm install"
+		},
+		{
+			"type": "shell",
 			"label": "pnpm prune (functions)",
 			"command": "pnpm prune --production --config.ignore-scripts=true",
 			"dependsOn": "pnpm build (functions)",
