--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"prettier": "^3.1.1",
 		"prisma": "^5.7.1",
 		"rimraf": "^5.0.0",
-		"typescript": "^4.0.0"
+		"typescript": "5.3.3"
 	},
 	"main": "dist/src/functions/**/*.js"
 }
