--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,11 @@
 	"debug.internalConsoleOptions": "neverOpen",
 	"azureFunctions.projectLanguageModel": 4,
 	"azureFunctions.preDeployTask": "pnpm prune (functions)",
-	"typescript.tsdk": "node_modules\\typescript\\lib"
+	"typescript.tsdk": "node_modules\\typescript\\lib",
+	"editor.codeActionsOnSave": {
+		"source.fixAll.eslint": "explicit",
+		"source.organizeImports.biome": "explicit",
+		"quickfix.biome": "explicit"
+	},
+	"editor.defaultFormatter": "biomejs.biome"
 }
