chore: misc changes
- schema changes
- AsignaturaEnMalla: add eje, area and campo to principal domain

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,5 @@
 		"source.organizeImports.biome": "explicit",
 		"quickfix.biome": "explicit"
 	},
-	"editor.defaultFormatter": "biomejs.biome"
+	"workbench.editor.enablePreviewFromQuickOpen": true
 }
