--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
 		"source.organizeImports.biome": "explicit",
 		"quickfix.biome": "explicit"
 	},
-	"workbench.editor.enablePreviewFromQuickOpen": true
+	"workbench.editor.enablePreviewFromQuickOpen": true,
+	"editor.defaultFormatter": "esbenp.prettier-vscode"
 }
