--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
 		"postinstall": "prisma generate"
 	},
 	"dependencies": {
-		"@azure/functions": "^4.0.0",
-		"@prisma/client": "^5.7.1",
-		"inversify": "^6.0.2",
-		"reflect-metadata": "^0.2.1",
-		"zod": "^3.22.4"
+		"@azure/functions": "4.0.0",
+		"@prisma/client": "5.7.1",
+		"inversify": "6.0.2",
+		"reflect-metadata": "0.2.1",
+		"zod": "3.22.4"
 	},
 	"devDependencies": {
-		"@types/node": "^18.x",
-		"@typescript-eslint/eslint-plugin": "^6.15.0",
-		"@typescript-eslint/parser": "^6.15.0",
-		"eslint": "^8.56.0",
-		"prettier": "^3.1.1",
-		"prisma": "^5.7.1",
-		"rimraf": "^5.0.0",
+		"@types/node": "18.x",
+		"@typescript-eslint/eslint-plugin": "6.15.0",
+		"@typescript-eslint/parser": "6.15.0",
+		"eslint": "8.56.0",
+		"prettier": "3.1.1",
+		"prisma": "5.7.1",
+		"rimraf": "5.0.0",
 		"typescript": "5.3.3"
 	},
 	"main": "dist/src/functions/**/*.js"
