chore: add format scripts and format files

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"create:modulo": "pnpm dlx hygen modulo new",
 		"db:pull": "prisma db pull",
 		"db:studio": "prisma studio --browser none",
+		"format:check": "prettier --check \"src/**/*.ts\"",
+		"format:write": "prettier --write \"src/**/*.ts\"",
 		"postinstall": "prisma generate"
 	},
 	"dependencies": {
