--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"db:studio": "prisma studio --browser none",
 		"format:check": "prettier --check \"src/**/*.ts\"",
 		"format:write": "prettier --write \"src/**/*.ts\"",
+		"lint": "eslint . --report-unused-disable-directives",
+		"lint:fix": "pnpm lint --fix",
 		"postinstall": "prisma generate"
 	},
 	"dependencies": {
@@ -24,6 +26,7 @@
 		"zod": "3.22.4"
 	},
 	"devDependencies": {
+		"@types/eslint": "^8.56.2",
 		"@types/node": "18.x",
 		"@typescript-eslint/eslint-plugin": "6.15.0",
 		"@typescript-eslint/parser": "6.15.0",
