--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -49,7 +49,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --config.node-linker=hoisted
 
       - name: Apply all pending migrations to the database
         run: pnpm dlx prisma migrate deploy
@@ -63,7 +63,7 @@ jobs:
           popd
 
       - name: Run prune
-        run: pnpm prune
+        run: pnpm prune --production --config.ignore-scripts=true
 
       - name: Run Azure Functions Action
         uses: Azure/functions-action@v1
