--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,13 +13,16 @@ env:
   AZURE_FUNCTIONAPP_NAME: "tecdu-api-dev" # set this to your function app name on Azure
   AZURE_FUNCTIONAPP_PACKAGE_PATH: "." # set this to the path to your function app project, defaults to the repository root
   NODE_VERSION: "18.x" # set this to the node version to use (e.g. '8.x', '10.x', '12.x')
-  AZURE_FUNCTIONAPP_PUBLISH_PROFILE: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE_DEV }}
-  DATABASE_URL: ${{ secrets.DATABASE_URL_DEV }}
-  SHADOW_DATABASE_URL_DEV: $${{ secrets.SHADOW_DATABASE_URL_DEV }}
 
 jobs:
-  build-and-deploy:
+  build-and-deploy-dev:
     runs-on: windows-latest
+    if: github.ref == 'refs/heads/dev'
+    env:
+      AZURE_FUNCTIONAPP_NAME: "tecdu-api-dev" # set this to your function app name on Azure
+      AZURE_FUNCTIONAPP_PUBLISH_PROFILE: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE_DEV }}
+      DATABASE_URL: ${{ secrets.DATABASE_URL_DEV }}
+      SHADOW_DATABASE_URL_DEV: $${{ secrets.SHADOW_DATABASE_URL_DEV }}
     steps:
       - name: "Checkout GitHub Action"
         uses: actions/checkout@v4
@@ -55,10 +58,9 @@ jobs:
         run: pnpm dlx prisma migrate deploy
 
       - name: Resolve Project Dependencies Using pnpm
-        shell: bash
+        shell: pwsh
         run: |
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          pnpm install --config.node-linker=hoisted
           pnpm --if-present run build
           pnpm --if-present run test
           popd
@@ -71,6 +73,6 @@ jobs:
         id: fa
         with:
           app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/dist
           publish-profile: ${{ env.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
 # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
