chore: add hygen as dev dependency

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"prestart": "npm run clean && npm run build",
 		"start": "func start",
 		"test": "echo \"No tests yet...\"",
-		"create:modulo": "pnpm dlx hygen modulo new",
-		"create:controller": "pnpm dlx hygen controller new",
+		"create:modulo": "hygen modulo new",
+		"create:controller": "hygen controller new",
 		"db:pull": "prisma db pull",
 		"db:studio": "prisma studio --browser none",
 		"format:check": "prettier --check \"src/**/*.ts\"",
@@ -32,6 +32,7 @@
 		"@typescript-eslint/eslint-plugin": "6.15.0",
 		"@typescript-eslint/parser": "6.15.0",
 		"eslint": "8.56.0",
+		"hygen": "^6.2.11",
 		"prettier": "3.1.1",
 		"prisma": "5.8.1",
 		"rimraf": "5.0.0",
