--- a/.funcignore
+++ b/.funcignore
@@ -1,10 +1,11 @@
 *.js.map
 *.ts
-.git*
+.git *
 .vscode
-__azurite_db*__.json
+__azurite_db * __.json
 __blobstorage__
 __queuestorage__
 local.settings.json
 test
 tsconfig.json
+src/Test
