--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"clean": "rimraf dist",
 		"prestart": "npm run clean && npm run build",
 		"start": "func start",
-		"test": "echo \"No tests yet...\"",
+		"test": "jest -i",
 		"create:modulo": "hygen modulo new",
 		"create:controller": "hygen controller new",
 		"db:pull": "prisma db pull",
@@ -28,14 +28,17 @@
 	},
 	"devDependencies": {
 		"@types/eslint": "^8.56.2",
+		"@types/jest": "^29.5.12",
 		"@types/node": "18.x",
 		"@typescript-eslint/eslint-plugin": "6.15.0",
 		"@typescript-eslint/parser": "6.15.0",
 		"eslint": "8.56.0",
 		"hygen": "^6.2.11",
+		"jest": "^29.7.0",
 		"prettier": "3.1.1",
 		"prisma": "5.8.1",
 		"rimraf": "5.0.0",
+		"ts-jest": "^29.1.2",
 		"typescript": "5.3.3"
 	},
 	"main": "dist/src/functions/**/*.js"
