--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"clean": "rimraf dist",
 		"prestart": "npm run clean && npm run build",
 		"start": "func start",
-		"test": "jest -i",
+		"test": "pnpm docker:up && pnpm db:test && jest -i",
 		"create:modulo": "hygen modulo new",
 		"create:controller": "hygen controller new",
 		"db:pull": "prisma db pull",
@@ -17,6 +17,9 @@
 		"format:write": "prettier --write \"src/**/*.ts\"",
 		"lint": "eslint . --report-unused-disable-directives",
 		"lint:fix": "pnpm lint --fix",
+		"docker:up": "docker-compose up -d",
+		"docker:down": "docker-compose down",
+		"db:test": "dotenv -e .env.test -- prisma db push",
 		"postinstall": "prisma generate"
 	},
 	"dependencies": {
@@ -32,9 +35,11 @@
 		"@types/node": "18.x",
 		"@typescript-eslint/eslint-plugin": "6.15.0",
 		"@typescript-eslint/parser": "6.15.0",
+		"dotenv-cli": "^7.3.0",
 		"eslint": "8.56.0",
 		"hygen": "^6.2.11",
 		"jest": "^29.7.0",
+		"jest-mock-extended": "3.0.5",
 		"prettier": "3.1.1",
 		"prisma": "5.8.1",
 		"rimraf": "5.0.0",
