--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,32 @@ services:
     hostname: localhost
     ports:
       - 42069:3306
-    volumes:
-      - my-db:/var/lib/mysql
+    # volumes:
+    #   - my-db:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: prisma
       MYSQL_DATABASE: tests
-
-volumes:
-  my-db:
-    driver: "local"
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "mysqladmin",
+          "--user=root",
+          "--password=prisma",
+          "--host",
+          "127.0.0.1",
+          "ping",
+        ]
+      interval: 3s
+      timeout: 5s
+      retries: 10
+  end:
+    # Using lightweight image for waiting the healthcheck from db
+    image: alpine:latest
+    command: echo "db ready"
+    depends_on:
+      db:
+        condition: service_healthy
+# volumes:
+#   my-db:
+#     driver: "local"
