--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"prestart": "npm run clean && npm run build",
 		"start": "func start",
 		"test": "pnpm docker:up && dotenv -e .env.test -- prisma db push && dotenv -e .env.test -- jest -i",
-		"test:unit": "jest --maxWorkers 1 --watch --testPathPattern=src/Tests/Unit",
+		"test:unit": "jest --maxWorkers 1 --watch --testPathPattern=src/Tests/Unit --setupFilesAfterEnv ./src/Tests/singleton.ts",
+		"test:e2e": "pnpm docker:up && dotenv -e .env.test -- prisma db push && dotenv -e .env.test -- jest -i --testPathPattern=src/Tests/E2e",
 		"create:modulo": "hygen modulo new",
 		"create:controller": "hygen controller new",
 		"db:pull": "prisma db pull",
